--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
   
     <div class="radio">
   
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="English">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Hello">
       <span class="label-body">English</span>
   
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Afrikaans">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Halo">
       <span class="label-body">Afrikaans</span>
   
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="IsiXhosa">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Molo">
       <span class="label-body">isiXhosa</span>
+
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Dumelang">
+      <span class="label-body">Sesotho</span>
   
   </div>
   
