--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   </div>
   
-  <h2>Counter <span class="myCounter"></span></h2>
+  <h2>Counter: <span class="myCounter"></span></h2>
   
   <div><button class="button greetBtn" on type="button" name="button">Greet Me</button>
        <button class="button resetBtn" on type="button" name="button">Reset</button>
