--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
   
     <div class="radio">
   
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Hello">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Hello ">
       <span class="label-body">English</span>
   
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Halo">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Halo ">
       <span class="label-body">Afrikaans</span>
   
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Molo">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Molo ">
       <span class="label-body">isiXhosa</span>
 
-      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Dumelang">
+      <input type="radio" name="greetRadioBtn" class="greetRadio" value="Dumelang ">
       <span class="label-body">Sesotho</span>
   
   </div>
@@ -47,10 +47,16 @@
   
   <div><button class="button greetBtn" on type="button" name="button">Greet Me</button>
        <button class="button resetBtn" on type="button" name="button">Reset</button>
+       <button class="button listallBtn" on type="button" name="button">List All</button>
+
   </div>
-  
+  <br>
+  <br>
   <div class="greetMessage"></div>
   <div class="errorMessage"></div>
+  <br>
+  <br>
+   <div class="names"></div>
 </div>
 </div>
 </div>
