added more features

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="errorMessage"></div>
   <br>
   <br>
-   <div class="names"></div>
+   <div class="listOfnames"></div>
 </div>
 </div>
 </div>
